# gmail

./: .gitignore  README.md  cleaner.py  convert_to_markdown.py  create_draft_with_attachment.py  create_drafts.py  creds.py  format_markdown.py  message_processor.py  output.md  pyproject.toml  quickstart.py
src/gmail_integration/: __init__.py
