[project]
name = "gmail-integration"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zen", email = "ztang230@gmail.com" }
]
dependencies = [
    "google-api-python-client>=2.141.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.2.0",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_integration"]
